file(GLOB dirs LIST_DIRECTORIES TRUE CONFIGURE_DEPENDS *)

add_library(ZenoModules INTERFACE)
foreach (dir ${dirs})
    if (IS_DIRECTORY ${dir})
        cmake_path(GET dir FILENAME name)
        option(ZENO_WITH_${name} "Build Zeno with module ${name}" ON)
        message("ZENO_WITH_${name}: ${WITH_${name}}")
        if (ZENO_WITH_${name})
            add_subdirectory(${name})
            target_link_libraries(ZenoModules INTERFACE ZenoModule_${name})
        endif()
    endif()
endforeach()
