file(GLOB dirs LIST_DIRECTORIES TRUE CONFIGURE_DEPENDS *)

add_library(zeno.modules INTERFACE)
foreach (dir ${dirs})
    if (IS_DIRECTORY ${dir})
        get_filename_component(name ${dir} NAME)
        option(ZENO_WITH_${name} "Build Zeno with module ${name}" ON)
        message("-- ZENO_WITH_${name}: [${ZENO_WITH_${name}}]")
        if (ZENO_WITH_${name})
            add_subdirectory(${name})
            target_link_libraries(zeno.modules INTERFACE zeno.modules.${name})
        endif()
    endif()
endforeach()
